// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon-size prop 1`] = `
<div class="buri-grid buri-hairline--top">
  <div class="buri-grid-item" style="flex-basis: 25%;">
    <div class="buri-grid-item__content buri-grid-item__content--center buri-hairline"><i class="buri-icon buri-icon-success buri-grid-item__icon" style="font-size: 10px;">
        <!----></i></div>
  </div>
</div>
`;

exports[`render icon-slot 1`] = `
<div class="buri-grid buri-hairline--top">
  <div class="buri-grid-item" style="flex-basis: 25%;">
    <div class="buri-grid-item__content buri-grid-item__content--center buri-hairline">
      <div class="buri-grid-item__icon-wrapper">
        <div></div>
        <div class="buri-info">1</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`sqaure and set gutter 1`] = `
<div class="buri-grid" style="padding-left: 10rem;">
  <div class="buri-grid-item buri-grid-item--square" style="flex-basis: 50%; padding-top: 50%;">
    <div class="buri-grid-item__content buri-grid-item__content--center buri-grid-item__content--square buri-grid-item__content--surround buri-hairline" style="right: 10rem; bottom: 10rem; height: auto;"></div>
  </div>
  <div class="buri-grid-item buri-grid-item--square" style="flex-basis: 50%; padding-top: 50%;">
    <div class="buri-grid-item__content buri-grid-item__content--center buri-grid-item__content--square buri-grid-item__content--surround buri-hairline" style="right: 10rem; bottom: 10rem; height: auto;"></div>
  </div>
  <div class="buri-grid-item buri-grid-item--square" style="flex-basis: 50%; padding-top: 50%;">
    <div class="buri-grid-item__content buri-grid-item__content--center buri-grid-item__content--square buri-grid-item__content--surround buri-hairline" style="right: 10rem; bottom: 10rem; height: auto;"></div>
  </div>
</div>
`;
